--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
   </h2>
 </div>
 <div style="text-align:center">
-  <video id="vid1" class="azuremediaplayer amp-default-skin" amp-big-play-centered classautoplay controls width="640" height="400" poster="poster.jpg" data-setup='{"controls": true, "autoplay": false}'>
-      <source src="{{currentMovie}}" type="application/vnd.ms-sstr+xml" />    
+  <video id="vid1" class="azuremediaplayer amp-default-skin" amp-big-play-centered classautoplay controls width="640" height="400">
+      <source src="{{currentMovie}}" type="application/vnd.ms-sstr+xml" data-setup='{"protectionInfo": [{"type": "PlayReady"},{"type": "Widevine"}]}'/>    
   </video>
 </div>
 <div>
