--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,20 @@
       Current Movie: {{ currentMovie }}
   </h2>
 </div>
-<div style="text-align:center">
+
+<!--Section for Will's DRM Files-->
+<!-- <div style="text-align:center">
   <video id="vid1" class="azuremediaplayer amp-default-skin" amp-big-play-centered classautoplay controls width="640" height="400">
       <source src="{{currentMovie}}" type="application/vnd.ms-sstr+xml" data-setup='{"protectionInfo": [{"type": "PlayReady"},{"type": "Widevine"}]}'/>    
   </video>
+</div> -->
+
+<div style="text-align:center">
+  <video id="vid1" class="azuremediaplayer amp-default-skin" autoplay controls width="640" height="400" poster="poster.jpg" data-setup='{"nativeControlsForTouch": false}'>
+      <source src="{{currentMovie}}" type="application/vnd.ms-sstr+xml" />
+  </video>
 </div>
+
 <div>
     <table style="width:100%">
       <thead>
